--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-redux": "^5.0.4",
     "react-scripts": "0.9.5",
     "redux": "^3.6.0",
-    "reselect": "^3.0.0"
+    "reselect": "^3.0.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
