--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start:db": "json-server --watch db.json --host 0.0.0.0 --port 3001",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "postinstall": "copy /Y db.sample.json db.json"
+    "seed": "copy /Y db.sample.json db.json",
+    "postinstall": "npm run seed"
   }
 }
