--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^5.0.4",
     "react-scripts": "0.9.5",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "reselect": "^3.0.0",
     "whatwg-fetch": "^2.0.3"
   },
