--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "devDependencies": {
     "json-server": "^0.10.0",
+    "prop-types": "^15.5.8",
+    "react-modal": "^1.7.7",
     "react-redux": "^5.0.4",
     "react-scripts": "0.9.5",
     "redux": "^3.6.0",
