--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "fetch-mock": "^5.10.0",
     "json-server": "^0.10.0",
     "prop-types": "^15.5.8",
     "react-modal": "^1.7.7",
     "react-redux": "^5.0.4",
     "react-scripts": "0.9.5",
     "redux": "^3.6.0",
+    "redux-mock-store": "^1.2.3",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.0",
     "whatwg-fetch": "^2.0.3"
