--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "fetch-mock": "^5.10.0",
     "json-server": "^0.10.0",
+    "moment": "^2.18.1",
     "prop-types": "^15.5.8",
     "react-modal": "^1.7.7",
     "react-redux": "^5.0.4",
