--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "concurrently": "^3.4.0",
     "fetch-mock": "^5.10.0",
     "json-server": "^0.10.0",
     "moment": "^2.18.1",
@@ -21,7 +22,8 @@
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"npm run start:db\" \"npm run start:react\"",
+    "start:react": "react-scripts start",
     "start:db": "json-server --watch db.json --host 0.0.0.0 --port 3001",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
