--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "start:db": "json-server --watch db.json --host 0.0.0.0 --port 3001",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "seed": "copy /Y db.sample.json db.json",
+    "seed": "cp -f db.sample.json db.json",
     "postinstall": "npm run seed"
   }
 }
