--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "concurrently": "^3.4.0",
+    "faker": "^4.1.0",
     "fetch-mock": "^5.10.0",
     "json-server": "^0.10.0",
     "moment": "^2.18.1",
@@ -17,6 +18,7 @@
     "react-scripts": "0.9.5",
     "redux": "^3.6.0",
     "redux-mock-store": "^1.2.3",
+    "redux-promise-middleware": "^4.2.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.0",
     "whatwg-fetch": "^2.0.3"
