--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prop-types": "^15.5.8",
     "react-modal": "^1.7.7",
     "react-redux": "^5.0.4",
+    "react-redux-form": "^1.11.0",
     "react-scripts": "0.9.5",
     "redux": "^3.6.0",
     "redux-mock-store": "^1.2.3",
