--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-notification-system": "^0.2.14"
+    "react-notification-system": "^0.2.14",
+    "react-router": "^3.0.5",
+    "react-router-redux": "^4.0.8"
   },
   "devDependencies": {
     "concurrently": "^3.4.0",
